--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
 annotated-types==0.7.0
 anyio==4.8.0
+bcrypt==4.3.0
 click==8.1.8
 dnspython==2.7.0
+email_validator==2.2.0
 fastapi==0.115.10
 h11==0.14.0
 idna==3.10
