--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
     "lucide-react": "^0.477.0",
+    "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "tailwindcss": "^4.0.9",
+    "tesseract.js": "^6.0.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
